files/iptables/rules.v6
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p ipv6-icmp -j ACCEPT -m comment  --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 465 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 587 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 993 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8448 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 18448 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT -m comment --comment "Ansble Managed Rule"
COMMIT
